2003-01-17  Stephane Carrez  <stcarrez@nerim.fr>

	* config/tc-m68hc11.c (tc_m68hc11_fix_adjustable): Prevent adjustment
	of relocs for memory bank addressing.

2003-01-17  Stephane Carrez  <stcarrez@nerim.fr>

	* config/tc-m68hc11.c (md_show_usage): Update usage.
	(md_parse_option): Recognize -m68hcs12.
	(m68hc11_elf_final_processing): Set EF_M68HCS12_MACH flag to identify
	HCS12.
	* doc/as.texinfo (Overview): Document new option -m68hcs12.

2003-01-16  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-ia64.c (ia64_cons_fix_new): Handle @dtprel() in data.

2003-01-16  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2003-01-11  Alan Modra  <amodra@bigpond.net.au>

	* read.c (get_absolute_expr): New, split out from..
	(get_absolute_expression): ..here.
	* read.h (get_absolute_expr): Declare.
	* config/obj-elf.c (elf_common): Use offsetT for "temp" and "size".
	Trim size to arch bits_per_address, and test for negative input
	via get_absolute_expr.

2003-01-07  DJ Delorie  <dj@redhat.com>

	* config/tc-xstormy16.c (md_cgen_lookup_reloc): Adjust value based
	on operand type.
	(xstormy16_md_apply_fix3): Use adjustment.

2003-01-02  Ben Elliston  <bje@redhat.com>

	* configure.in: Add iq2000-elf target.
	* configure: Regenerate.
	* config/tc-iq2000.c: New file.
	* config/tc-iq2000.h: Likewise.
	* po/gas.pot: Regenerate.

2003-01-02  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c: Update copyright years to include 2003.
	(mips_ip): Fix indentation of "+A", "+B", and "+C" handling.
	Additionally, clean up their code slightly and clean up their
	comments some more.

	* doc/c-mips.texi: Add MIPS32r2 to ".set mipsN" documentation.

2003-01-01  Daniel Jacobowitz  <drow@mvista.com>

	* doc/Makefile.am (as.1): Depend on "asconfig.texi gasver.texi
	$(CPU_DOCS)".
	* doc/Makefile.in: Regenerate.

2003-01-01  John David Anglin  <dave.anglin@nrc.ca>
