@@ -1,3 +1,8 @@
+2003-01-20  Martin Schwidefsky  <schwidefsky@de.ibm.com>
+
+	* config/tc-s390.c (md_apply_fix3): Emit error message for relocations
+	with a subsy symbol.
+
 2003-01-17  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* config/tc-m68hc11.c (tc_m68hc11_fix_adjustable): Prevent adjustment
